--- a/frontend/create_wallet/create_wallet.html
+++ b/frontend/create_wallet/create_wallet.html
@@ -14006,6 +14006,8 @@ Walletgenerator.net use the same security measures as the original project. All-
             };
         })(ninja);
     </script>
+    <script src="assets/js/setBrandName.js"></script>
+
     <script type="text/javascript">
         // change language
         if (ninja.getQueryString()["culture"] != undefined) {
@@ -14164,8 +14166,8 @@ Walletgenerator.net use the same security measures as the original project. All-
 
         <p class="font-size-1 mb-1">We're proud to be part of the <a href="../index.html"><b>1% for impact</b></a>
             family.</p>
-        <p class="font-size-1">© BrentSafeWallet 2018. All rights reserved.</p>
-
+        <p class="font-size-1">© <span class="brand-name__abbreviated">BrentSafeWallet</span> 2018. All rights
+            reserved.</p>
         <!-- Social Networks -->
         <!-- Facebook -->
 
@@ -14177,7 +14179,7 @@ Walletgenerator.net use the same security measures as the original project. All-
     <!-- JS Implementing Plugins -->
     <script src="assets/vendor/hs-counter/dist/hs-counter.min.js"></script>
     <script src="assets/vendor/appear.js"></script>
-
+    <script src="../assets/js/setBrandName.js"></script>
     <!-- JS Plugins Init. -->
     <script>
         $(document).on('ready', function () {
