--- a/frontend/index.html
+++ b/frontend/index.html
@@ -133,8 +133,7 @@
         </nav>
         <!-- End Nav -->
       </div>
-      <MARQUEE onmouseover="this.stop()" onmouseout="this.start()"
-        class="row-container">
+      <MARQUEE lang="-1" behavior="scroll" direction="left" onmouseover="this.stop()" onmouseout="this.start()" class="row-container">
         <div class="row">
           <div class="row__item"></div>
         </div>
@@ -521,7 +520,7 @@
             you the right to be a private holder of cryptocurrency.The cold paper wallet leaves you the right to store
             your cash offline.
           </div>
-          
+
           <div class="text-center mx-md-auto mb-4 mb-md-4">
             <h2 style="margin-top: 0;margin-bottom: 15px;">Choose unique Business wallet design</h2>
           </div>
@@ -938,7 +937,8 @@
 
           <p class="font-size-1 mb-1">We're proud to be part of the <a href="index.html"><b>1% for impact</b></a>
             family.</p>
-          <p class="font-size-1">© BrentSafeWallet 2018. All rights reserved.</p>
+          <p class="font-size-1">© <span class="brand-name__abbreviated">BrentSafeWallet</span> 2018. All rights
+            reserved.</p>
 
           <!-- Social Networks -->
           <!-- Facebook -->
@@ -958,7 +958,6 @@
         <script src="assets/js/getPrices.js"></script>
 
         <script>
-          window.replainSettings = { id: '7a856c4e-62c6-41a5-abe4-a783ebc1e117' };
           (function (u) {
             var s = document.createElement('script'); s.async = true; s.src = u;
             var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
