--- a/frontend/faqs.html
+++ b/frontend/faqs.html
@@ -402,7 +402,8 @@
   <script src="assets/vendor/hs-counter/dist/hs-counter.min.js"></script>
   <script src="assets/vendor/appear.js"></script>
   <script src="assets/js/getPrices.js"></script>
-  <script src="assets/js/loader.js"></script>
+  <script type="module"  src="assets/js/loader.js"></script>
+  <script src="assets/js/dropdown.js"></script>
   <script src="assets/js/setBrandName.js"></script>
   <script>
     window.replainSettings = { id: 'debd3507-d1e6-486b-86e9-bab5f52bda2f' };
