--- a/frontend/blog.html
+++ b/frontend/blog.html
@@ -503,7 +503,7 @@
   <script src="assets/vendor/hs-counter/dist/hs-counter.min.js"></script>
   <script src="assets/vendor/appear.js"></script>
   <script src="assets/js/getPrices.js"></script>
-  <script src="assets/js/loader.js"></script>
+  <script  type="module" src="assets/js/loader.js"></script>
   <script src="assets/js/setBrandName.js"></script>
 
   <script>
