--- a/frontend/gallery.html
+++ b/frontend/gallery.html
@@ -525,7 +525,8 @@
   <script src="assets/vendor/appear.js"></script>
   <script src="assets/js/getPrices.js"></script>
 
-  <script src="assets/js/loader.js"></script>
+  <script type="module" src="assets/js/loader.js"></script>
+  <script src="assets/js/dropdown.js"></script>
   <script src="assets/js/setBrandName.js"></script>
   <script>
 
