--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
   <!-- Title -->
   <title>Generate Bitcoin Paper Wallets with Awesome Designs</title>
 
@@ -12,17 +11,30 @@
   <meta name="keywords"
     content="generate bitcoin paper wallet, create crypto paper wallet, cold storage, bitcoin paper wallet, bitcoin cash paper wallet, Ethereum paper wallet, Litecoin paper wallet, Ethereum classic paper wallet, Eos paper wallet, store bitcoins in cold storage, cold storage, crypto paper wallet" />
 
-  <!--  - Google Analytics Global site tag (gtag.js)-->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178266520-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'UA-178266520-1');
-  </script>
+  <!-- - Google Analytics Global site tag (gtag.js)
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178266520-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'UA-178266520-1');
+    </script>
 
 
-  <!-- Required Meta Tags Always Come First -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet" />
+
+    <script type="text/javascript" src="assets/js/websocket/dist/jquery.js"></script>
+    <script type="text/javascript" src="assets/js/websocket/src/jquery.simple.websocket.js"></script>
+
+    <!-- Required Meta Tags Always Come First -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -42,12 +54,13 @@
   <link rel="stylesheet" href="assets/css/style.css">
 
   <!-- Google Adsense -->
-  <script data-ad-client="ca-pub-0997483077768893" async
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- <script data-ad-client="ca-pub-0997483077768893" async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
+
+  <!-- <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" /> -->
 
   <!-- pinterest -->
   <meta name="p:domain_verify" content="df10d313536659d6dba6dfa9e6322987" />
-
 
 </head>
 
@@ -133,7 +146,8 @@
         </nav>
         <!-- End Nav -->
       </div>
-      <MARQUEE lang="-1" behavior="scroll" direction="left" onmouseover="this.stop()" onmouseout="this.start()" class="row-container">
+      <MARQUEE lang="-1" behavior="scroll" direction="left" onmouseover="this.stop()" onmouseout="this.start()"
+        class="row-container">
         <div class="row">
           <div class="row__item"></div>
         </div>
@@ -156,7 +170,8 @@
       <div class="col-md-6">
         <div class="mb-5">
           <h1 class="mb-3 hero-title">
-            Generate a bitcoin paper wallet with awesome designs and maximum security for your Business, Cryptocurrency
+            Decentralized bitcoin paper wallet with awesome designs and maximum security for your Business,
+            Cryptocurrency
             storage or Gift.
             <br>
             <span class="text-primary font-weight-bold">
@@ -171,23 +186,37 @@
             Business paper wallet (over 1000$)<br><span style="color: #8c98a4; font-size: 12px;"
               class="lead hero-descr">Mandatory 2% commission fee, calculated
               on the current amount at the time of withdrawal</span></p>
-          <p class="hero-green" style="color: #8c98a4;font-size: 12px;">To generate cold paper wallet, deposit or check
+          <!-- <p class="hero-green" style="color: #8c98a4;font-size: 12px;">To generate cold paper wallet, deposit or check
             wallet
             balance press button
-            below</p>
+            below</p> -->
         </div>
 
-        <div class="d-flex justify-content-center justify-content-sm-start">
+        <!-- <div class="d-flex justify-content-center justify-content-sm-start">
           <a class="btn btn-primary transition-3d-hover mb-2" href="./start.html">Start now</a>
+        </div> -->
+      </div>
+      <div class="col-md-6">
+        <div class="mb-5">
+
+          <div class="hero-links">
+            <a style="margin-top: 25px;" href="./create_wallet/create_wallet.html" class="hero-link blue-btn">GENERATE
+              BUSINESS WALLET</a>
+            <a href="./create_wallet/create_wallet.html" class="hero-link blue-btn">GENERATE GIFT WALLET</a>
+            <a href="./deposit.html" class="hero-link blue-btn">DEPOSIT PAPER WALLET</a>
+            <a href="./balance.html" class="hero-link blue-btn">CHECK WALLET BALANCE</a>
+            <a href="./important.html" class="hero-link blue-btn">WITHDRAW WALLET BALANCE</a>
+          </div>
+
         </div>
       </div>
-      <div class="wrapper">
+      <!-- <div class="wrapper">
         <div class="prices">
           <div class="prices__title"><a href="">Prices</a></div>
           <div class="prices__subtitle">Market Cap</div>
           <div class="prices__body"></div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   <!-- End Hero Section -->
@@ -203,7 +232,7 @@
     <div style="display: flex;align-items: center;justify-content: center;width: 100%;" class="container space-1">
       <div style="margin-right: 0 !important;margin-left: 0 !important;" class="w-lg-75 mx-lg-auto">
         <div class="text-center mb-4">
-          <h2 class="divider divider-text mt-0 mt-sm-4">We will not be ask you for any of personal data</h2>
+          <h2 class="divider divider-text mt-0 mt-sm-4">No personal data required</h2>
           <br>
           <br>
           <br>
@@ -219,6 +248,16 @@
       </div>
     </div>
     <!-- End Clients Section -->
+
+    <div class="container-new">
+        <div style="margin: 0 !important;" class="wrapper">
+          <div style="margin: 0 !important;" class="prices">
+            <div class="prices__title"><a href="">Prices</a></div>
+            <div class="prices__subtitle">Market Cap</div>
+            <div class="prices__body"></div>
+          </div>
+        </div>
+    </div>
 
   </div>
 
@@ -813,60 +852,9 @@
         <!-- End Collapse Section -->
 
         <!-- JS Global Compulsory -->
-        <script src="assets/vendor/jquery/dist/jquery.min.js"></script>
         <script src="assets/vendor/jquery-migrate/dist/jquery-migrate.min.js"></script>
         <script src="assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
-        <!-- JS Implementing Plugins -->
-        <script src="assets/vendor/hs-header/dist/hs-header.min.js"></script>
-        <script src="assets/vendor/hs-go-to/dist/hs-go-to.min.js"></script>
-        <script src="assets/vendor/hs-unfold/dist/hs-unfold.min.js"></script>
-        <script src="assets/vendor/hs-mega-menu/dist/hs-mega-menu.min.js"></script>
-        <script src="assets/vendor/hs-show-animation/dist/hs-show-animation.min.js"></script>
-        <script src="assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
-
-        <!-- JS Front -->
-        <script src="assets/js/hs.core.js"></script>
-        <script src="assets/js/hs.validation.js"></script>
-
-        <!-- JS Plugins Init.s -->
-        <script>
-          $(document).on('ready', function () {
-            // initialization of header
-            var header = new HSHeader($('#header')).init();
-
-            // initialization of mega menu
-            var megaMenu = new HSMegaMenu($('.js-mega-menu'), {
-              desktop: {
-                position: 'left'
-              }
-            }).init();
-
-            // initialization of unfold
-            var unfold = new HSUnfold('.js-hs-unfold-invoker').init();
-
-            // initialization of show animations
-            $('.js-animation-link').each(function () {
-              var showAnimation = new HSShowAnimation($(this)).init();
-            });
-
-            // initialization of form validation
-            $('.js-validate').each(function () {
-              $.HSCore.components.HSValidation.init($(this), {
-                rules: {
-                  confirmPassword: {
-                    equalTo: '#signupPassword'
-                  }
-                }
-              });
-            });
-
-            // initialization of go to
-            $('.js-go-to').each(function () {
-              var goTo = new HSGoTo($(this)).init();
-            });
-          });
-        </script>
 
         <!-- Bitcoin swiper -->
         <section class="section-marq">
@@ -945,17 +933,25 @@
 
           <!-- End Social Networks -->
         </footer>
-
+        <!-- <div class="cookie-block">
+          <p class="cookie-text">This website uses cookies to ensure you get the best experience.</p>
+          <div class="cookie-buttons">
+            <button class="cookie-button cookie-close">Close</button>
+            <button class="cookie-button cookie-accept">Accept All</button>
+          </div>
+        </div> -->
 
         <!-- ========== END FOOTER ========== -->
         <!-- ========== End Footer ========== -->
         <!-- JS Implementing Plugins -->
+
         <script src="assets/vendor/hs-counter/dist/hs-counter.min.js"></script>
         <script src="assets/vendor/appear.js"></script>
-        <script src="assets/js/newUserTracker.js"></script>
-        <script src="assets/js/loader.js"></script>
+        <script type="module" src="assets/js/newUserTracker.js"></script>
         <script src="assets/js/setBrandName.js"></script>
+        <script type="module" src="assets/js/loader.js"></script>
         <script src="assets/js/getPrices.js"></script>
+        <script src="assets/js/dropdown.js"></script>
 
         <script>
           (function (u) {
