--- a/frontend/start.html
+++ b/frontend/start.html
@@ -897,7 +897,8 @@
           run_blockchain_coin('btc');
         </script>
 
-        <script src="assets/js/loader.js"></script>
+        <script type="module" src="assets/js/loader.js"></script>
+        <script src="assets/js/dropdown.js"></script>
         <script src="assets/js/setBrandName.js"></script>
         <script>
           (function (u) {
